feat: WIP pesquisando mapa de notas pelo ano

--- a/src/main/resources/templates/layout/layout.html
+++ b/src/main/resources/templates/layout/layout.html
@@ -121,7 +121,7 @@
                         </a>
                          <div class="dropdown-menu" aria-labelledby="navbarAdmin">
                             <a class="dropdown-item" th:href="@{/gtcc/mapanotas/lancarNotas}" >Lançar nota</a>
-                            <a class="dropdown-item" th:href="@{/gtcc/mapanotas}" >Consultar</a>
+                            <a class="dropdown-item" th:href="@{/gtcc/mapanotas/consultar}" >Consultar</a>
                         </div> 
                     </li>
                     <li class="sair-nav">
