--- a/src/main/resources/templates/mapanotas/index.html
+++ b/src/main/resources/templates/mapanotas/index.html
@@ -16,6 +16,26 @@
                     <h3>Mapa de Notas</h3>
                 </div>
                   <hr/>
+                  <form th:object="${mapaNotasFiltro}"
+						th:action="@{/gtcc/mapanotas/consultar}" method="POST"
+						class="form-default form-horizontal">
+						<div class="form-group row justify-content-center">
+							<div class="field-wrapper col-xl-8">
+								<input type="text" name="ano" id="ano"
+									class="form-control" th:field="*{ano}"
+									aria-label="Ano" aria-describedby="basic-addon1">
+								<div class="field-placeholder">
+									<span>Ano</span>
+								</div>
+							</div>
+							<div class="input-group col-xl-2">
+								<button class="btn btn-outline-secondary" type="submit"
+									style="height: 60px;">
+									<span class="fa fa-search"></span> Pesquisar
+								</button>
+							</div>
+						</div>
+					</form>
                 <div class="table-responsive">
 				  <table id="table" class="table table-hover table-bordered">
 				  	<thead class="thead-dark">
@@ -135,8 +155,6 @@
 					
 					//ADICIONANDO MÉDIA FINAL
 					tds += "<td>"+(sum_total/count_total).toFixed(2)+"</td>";
-					
-					
 					$("#informations_mapaNotas"+count_id+" td:last").after(
 							tds
 					   		)
