--- a/src/main/resources/templates/criterioAvaliacao/criterioCreate.html
+++ b/src/main/resources/templates/criterioAvaliacao/criterioCreate.html
@@ -33,7 +33,7 @@
 
 						<div class="form-group row justify-content-center">
 
-							<div class="field-wrapper col-xl-2">
+							<div class="field-wrapper col-4">
 								<input type="number" name="ano" id="ano" class="form-control"
 									th:field="*{ano}" aria-label="Ano"
 									aria-describedby="basic-addon1">
@@ -42,7 +42,7 @@
 								</div>
 							</div>
 
-							<div class="input-group col-xl-8"></div>
+							<div class="input-group col-xl-6"></div>
 
 						</div>
 
