--- a/src/main/resources/static/report/edital_defesas.jrxml
+++ b/src/main/resources/static/report/edital_defesas.jrxml
@@ -1,8 +1,18 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!-- Created with Jaspersoft Studio version 6.8.0.final using JasperReports Library version 6.8.0-2ed8dfabb690ff337a5797129f2cd92902b0c87b  -->
-<jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="edital_defesas2" pageWidth="842" pageHeight="595" orientation="Landscape" columnWidth="802" leftMargin="20" rightMargin="20" topMargin="20" bottomMargin="20" uuid="4fdae6c2-e506-49fa-8a50-500f10d0a4be">
+<jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="edital_defesas2" pageWidth="842" pageHeight="595" orientation="Landscape" whenNoDataType="AllSectionsNoDetail" columnWidth="802" leftMargin="20" rightMargin="20" topMargin="20" bottomMargin="20" uuid="8a465670-cc4a-4270-965f-8efb86e33b71">
+	<property name="template.engine" value="tabular_template"/>
 	<property name="com.jaspersoft.studio.data.sql.tables" value=""/>
 	<property name="com.jaspersoft.studio.data.defaultdataadapter" value="New Data Adapter "/>
+	<style name="Table">
+		<box>
+			<pen lineWidth="1.0" lineColor="#000000"/>
+			<topPen lineWidth="1.0" lineColor="#000000"/>
+			<leftPen lineWidth="1.0" lineColor="#000000"/>
+			<bottomPen lineWidth="1.0" lineColor="#000000"/>
+			<rightPen lineWidth="1.0" lineColor="#000000"/>
+		</box>
+	</style>
 	<style name="Table_TH" mode="Opaque" backcolor="#FFFFFF">
 		<box>
 			<pen lineWidth="0.5" lineColor="#000000"/>
@@ -12,7 +22,7 @@
 			<rightPen lineWidth="0.5" lineColor="#000000"/>
 		</box>
 	</style>
-	<style name="Table_CH" mode="Opaque" backcolor="#DBDBDB">
+	<style name="Table_CH" mode="Opaque" backcolor="#EFEFEF">
 		<box>
 			<pen lineWidth="0.5" lineColor="#000000"/>
 			<topPen lineWidth="0.5" lineColor="#000000"/>
@@ -29,17 +39,13 @@
 			<bottomPen lineWidth="0.5" lineColor="#000000"/>
 			<rightPen lineWidth="0.5" lineColor="#000000"/>
 		</box>
-		<conditionalStyle>
-			<conditionExpression><![CDATA[new Boolean($V{REPORT_COUNT}.intValue()%2==0)]]></conditionExpression>
-			<style backcolor="#DBDBDB"/>
-		</conditionalStyle>
 	</style>
-	<subDataset name="Dataset1" uuid="7f062aa8-4a32-4ba5-ac2e-00598b2ef06a">
-		<property name="com.jaspersoft.studio.data.sql.tables" value=""/>
+	<subDataset name="tableDataset" uuid="57acb966-3e82-4650-a787-58f210525d80">
 		<property name="com.jaspersoft.studio.data.defaultdataadapter" value="New Data Adapter "/>
 		<queryString language="SQL">
-			<![CDATA[select
-    a.data_defesa, a.local, a.horario,
+			<![CDATA[select 
+    DATE_FORMAT(a.data_defesa, '%d/%m/%Y') as data_defesa,
+    a.local, a.horario,
     fi.titulo_trabalho,
     us.nome as nome_aluno
      from agendamento a
@@ -49,11 +55,12 @@
      fi.aluno_id_usuario = al.id_usuario
      join usuario us on
      al.id_usuario = us.id_usuario
-     where a.ativo = '1']]>
+     where a.ativo = '1'
+     GROUP BY us.nome
+     order by data_defesa, a.horario asc]]>
 		</queryString>
-		<field name="data_defesa" class="java.sql.Date">
+		<field name="data_defesa" class="java.lang.String">
 			<property name="com.jaspersoft.studio.field.label" value="data_defesa"/>
-			<property name="com.jaspersoft.studio.field.tree.path" value="agendamento"/>
 		</field>
 		<field name="local" class="java.lang.String">
 			<property name="com.jaspersoft.studio.field.label" value="local"/>
@@ -72,143 +79,162 @@
 			<property name="com.jaspersoft.studio.field.tree.path" value="usuario"/>
 		</field>
 	</subDataset>
-	<queryString language="SQL">
-		<![CDATA[select ano from agendamento]]>
+	<parameter name="ano" class="java.lang.Integer"/>
+	<queryString>
+		<![CDATA[]]>
 	</queryString>
-	<field name="ano" class="java.lang.Integer">
-		<property name="com.jaspersoft.studio.field.label" value="ano"/>
-		<property name="com.jaspersoft.studio.field.tree.path" value="agendamento"/>
-	</field>
-	<background>
-		<band splitType="Stretch"/>
-	</background>
 	<title>
-		<band height="48" splitType="Stretch">
+		<band height="45" splitType="Stretch">
 			<textField>
-				<reportElement positionType="Float" x="0" y="0" width="802" height="44" uuid="c957597d-1917-4db6-afc6-0868712fa822"/>
+				<reportElement positionType="Float" x="0" y="0" width="802" height="44" uuid="8cf42c8a-2adb-4b43-8593-4ee622a961d8"/>
 				<textElement textAlignment="Center" verticalAlignment="Middle">
 					<font size="18" isBold="true"/>
 				</textElement>
-				<textFieldExpression><![CDATA["EDITAL DE DEFESAS DE TCC " + $F{ano}]]></textFieldExpression>
+				<textFieldExpression><![CDATA["EDITAL DE DEFESAS DE TCC " + $P{ano}]]></textFieldExpression>
 			</textField>
 		</band>
 	</title>
 	<pageFooter>
-		<band height="22" splitType="Stretch"/>
+		<band height="38" splitType="Stretch"/>
 	</pageFooter>
 	<summary>
-		<band height="151" splitType="Stretch">
+		<band height="200" splitType="Stretch">
+			<property name="local_mesure_unitheight" value="pixel"/>
 			<componentElement>
-				<reportElement x="1" y="0" width="801" height="150" uuid="d4e2ea01-c021-4a2c-8cf0-9bcb45bde593">
-					<property name="com.jaspersoft.studio.layout" value="com.jaspersoft.studio.editor.layout.VerticalRowLayout"/>
+				<reportElement x="0" y="0" width="802" height="200" uuid="ae812acd-7750-4030-8730-81c8cd1923d4">
 					<property name="com.jaspersoft.studio.table.style.table_header" value="Table_TH"/>
 					<property name="com.jaspersoft.studio.table.style.column_header" value="Table_CH"/>
 					<property name="com.jaspersoft.studio.table.style.detail" value="Table_TD"/>
 				</reportElement>
 				<jr:table xmlns:jr="http://jasperreports.sourceforge.net/jasperreports/components" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports/components http://jasperreports.sourceforge.net/xsd/components.xsd">
-					<datasetRun subDataset="Dataset1" uuid="9cc3c9b2-34f6-469d-ba31-4031a781f91c">
+					<datasetRun subDataset="tableDataset" uuid="15851115-a741-42fc-8577-83016816ca24">
 						<connectionExpression><![CDATA[$P{REPORT_CONNECTION}]]></connectionExpression>
 					</datasetRun>
-					<jr:column width="80" uuid="f78004ff-5a55-4756-846c-efcdaab33c25">
+					<jr:column width="110" uuid="2bc3be00-8879-4c53-a867-ae6df23f9e1f">
 						<property name="com.jaspersoft.studio.components.table.model.column.name" value="Column1"/>
 						<jr:columnHeader style="Table_CH" height="30">
 							<staticText>
-								<reportElement x="0" y="0" width="80" height="30" uuid="30f7be61-38d4-484c-88ca-b1ef135dc2e9"/>
-								<textElement textAlignment="Center"/>
+								<reportElement x="0" y="0" width="110" height="30" uuid="1ed9964e-e43b-43ec-9a78-e0e57993f3c1"/>
+								<box leftPadding="2"/>
+								<textElement textAlignment="Center" verticalAlignment="Middle">
+									<font fontName="SansSerif" size="12" isBold="true"/>
+								</textElement>
 								<text><![CDATA[Data]]></text>
 							</staticText>
 						</jr:columnHeader>
 						<jr:detailCell style="Table_TD" height="30">
-							<textField evaluationTime="Report">
-								<reportElement x="0" y="0" width="80" height="30" uuid="9f9f60ab-15d8-420e-84f3-a26e130cdfb8">
-									<property name="com.jaspersoft.studio.unit.firstLineIndent" value="px"/>
+							<textField>
+								<reportElement x="0" y="0" width="110" height="30" uuid="7e41e20d-8581-4f1a-b965-c3e51be40a9d">
+									<property name="com.jaspersoft.studio.unit.leftIndent" value="px"/>
 								</reportElement>
-								<textElement textAlignment="Left" verticalAlignment="Middle">
-									<paragraph firstLineIndent="5"/>
+								<box leftPadding="2"/>
+								<textElement textAlignment="Center" verticalAlignment="Middle">
+									<font fontName="SansSerif" size="12"/>
+									<paragraph leftIndent="5"/>
 								</textElement>
 								<textFieldExpression><![CDATA[$F{data_defesa}]]></textFieldExpression>
 							</textField>
 						</jr:detailCell>
 					</jr:column>
-					<jr:column width="70" uuid="1f001c99-450f-438f-88dc-e2cb95c78f6e">
+					<jr:column width="80" uuid="c825ee02-7b92-4b5e-b927-50504a681b2a">
 						<property name="com.jaspersoft.studio.components.table.model.column.name" value="Column2"/>
 						<jr:columnHeader style="Table_CH" height="30">
 							<staticText>
-								<reportElement x="0" y="0" width="70" height="30" uuid="69b68c2d-684c-4bc1-8cfa-f222f13b2ccb"/>
-								<textElement textAlignment="Center"/>
+								<reportElement x="0" y="0" width="80" height="30" uuid="8666abbc-f0d3-4f0e-933f-292ab1e287af"/>
+								<box leftPadding="2"/>
+								<textElement textAlignment="Center" verticalAlignment="Middle">
+									<font fontName="SansSerif" size="12" isBold="true"/>
+								</textElement>
 								<text><![CDATA[Horário]]></text>
 							</staticText>
 						</jr:columnHeader>
 						<jr:detailCell style="Table_TD" height="30">
 							<textField>
-								<reportElement x="0" y="0" width="70" height="30" uuid="d575c77d-f632-446f-aa8d-41b662d3947c">
-									<property name="com.jaspersoft.studio.unit.firstLineIndent" value="px"/>
+								<reportElement x="0" y="0" width="80" height="30" uuid="2cfe9410-7fbc-4424-b226-6cad4096d058">
+									<property name="com.jaspersoft.studio.unit.leftIndent" value="px"/>
 								</reportElement>
-								<textElement textAlignment="Left" verticalAlignment="Middle">
-									<paragraph firstLineIndent="5"/>
+								<box leftPadding="2"/>
+								<textElement textAlignment="Center" verticalAlignment="Middle">
+									<font fontName="SansSerif" size="12"/>
+									<paragraph leftIndent="5"/>
 								</textElement>
 								<textFieldExpression><![CDATA[$F{horario}]]></textFieldExpression>
 							</textField>
 						</jr:detailCell>
 					</jr:column>
-					<jr:column width="80" uuid="e07b0da0-b0e7-435e-be72-fff05335afd3">
+					<jr:column width="110" uuid="67baeaa9-5a40-4d7c-ae62-0f212fa6f353">
 						<property name="com.jaspersoft.studio.components.table.model.column.name" value="Column3"/>
 						<jr:columnHeader style="Table_CH" height="30">
 							<staticText>
-								<reportElement x="0" y="0" width="80" height="30" uuid="82e37459-9c3e-4a80-b43a-0023b2f02f00"/>
-								<textElement textAlignment="Center"/>
+								<reportElement x="0" y="0" width="110" height="30" uuid="fa309ac7-db7a-41e4-b9a6-d29f90bf1a40"/>
+								<box leftPadding="2"/>
+								<textElement textAlignment="Center" verticalAlignment="Middle">
+									<font fontName="SansSerif" size="12" isBold="true"/>
+								</textElement>
 								<text><![CDATA[Local]]></text>
 							</staticText>
 						</jr:columnHeader>
 						<jr:detailCell style="Table_TD" height="30">
-							<textField>
-								<reportElement x="0" y="0" width="80" height="30" uuid="1ef38a21-71a6-4385-9f7f-149b01138f86">
-									<property name="com.jaspersoft.studio.unit.firstLineIndent" value="px"/>
+							<textField isStretchWithOverflow="true">
+								<reportElement x="0" y="0" width="110" height="30" uuid="913ce6c0-9ded-4a8f-837b-bcc232e92a83">
+									<property name="com.jaspersoft.studio.unit.leftIndent" value="px"/>
 								</reportElement>
-								<textElement textAlignment="Left" verticalAlignment="Middle">
-									<paragraph firstLineIndent="5"/>
+								<box leftPadding="2"/>
+								<textElement textAlignment="Center" verticalAlignment="Middle">
+									<font fontName="SansSerif" size="12"/>
+									<paragraph leftIndent="5"/>
 								</textElement>
 								<textFieldExpression><![CDATA[$F{local}]]></textFieldExpression>
 							</textField>
 						</jr:detailCell>
 					</jr:column>
-					<jr:column width="240" uuid="3b5d5938-0378-4a14-9562-af90244bbd72">
+					<jr:column width="200" uuid="c0f76244-f15c-41d2-991e-fd7f90de03e0">
 						<property name="com.jaspersoft.studio.components.table.model.column.name" value="Column4"/>
 						<jr:columnHeader style="Table_CH" height="30">
 							<staticText>
-								<reportElement x="0" y="0" width="240" height="30" uuid="e66083b5-eb76-4934-8a07-10b9e48944be"/>
-								<textElement textAlignment="Center"/>
-								<text><![CDATA[Acadêmico]]></text>
+								<reportElement x="0" y="0" width="200" height="30" uuid="458099a2-47a4-4f54-8308-acead70d30ee"/>
+								<box leftPadding="2"/>
+								<textElement textAlignment="Center" verticalAlignment="Middle">
+									<font fontName="SansSerif" size="12" isBold="true"/>
+								</textElement>
+								<text><![CDATA[Nome Aluno]]></text>
 							</staticText>
 						</jr:columnHeader>
 						<jr:detailCell style="Table_TD" height="30">
-							<textField>
-								<reportElement x="0" y="0" width="240" height="30" uuid="36d34c60-d59c-44dd-af6f-936df5fda717">
-									<property name="com.jaspersoft.studio.unit.firstLineIndent" value="px"/>
+							<textField isStretchWithOverflow="true">
+								<reportElement x="0" y="0" width="200" height="30" uuid="67d200b2-990e-4d8a-82c2-39f93aaf8df8">
+									<property name="com.jaspersoft.studio.unit.leftIndent" value="px"/>
 								</reportElement>
+								<box leftPadding="2"/>
 								<textElement textAlignment="Left" verticalAlignment="Middle">
-									<paragraph firstLineIndent="5"/>
+									<font fontName="SansSerif" size="12"/>
+									<paragraph leftIndent="5"/>
 								</textElement>
 								<textFieldExpression><![CDATA[$F{nome_aluno}]]></textFieldExpression>
 							</textField>
 						</jr:detailCell>
 					</jr:column>
-					<jr:column width="331" uuid="8f9f0ab4-68d5-444e-bba6-1c9630c874f7">
+					<jr:column width="302" uuid="12564f33-5e45-4bb0-98c5-7c09add2e65c">
 						<property name="com.jaspersoft.studio.components.table.model.column.name" value="Column5"/>
 						<jr:columnHeader style="Table_CH" height="30">
 							<staticText>
-								<reportElement x="0" y="0" width="331" height="30" uuid="40ba0cfe-ad4d-4a5b-bc22-599aa28d9d0b"/>
-								<textElement textAlignment="Center"/>
+								<reportElement x="0" y="0" width="302" height="30" uuid="383a6893-5545-45b4-9440-5d2fc9dcede3"/>
+								<box leftPadding="2"/>
+								<textElement textAlignment="Center" verticalAlignment="Middle">
+									<font fontName="SansSerif" size="12" isBold="true"/>
+								</textElement>
 								<text><![CDATA[Título Trabalho]]></text>
 							</staticText>
 						</jr:columnHeader>
 						<jr:detailCell style="Table_TD" height="30">
-							<textField>
-								<reportElement x="0" y="0" width="331" height="30" uuid="453fff7c-f4a7-4ab5-b393-e4ec209f0afd">
-									<property name="com.jaspersoft.studio.unit.firstLineIndent" value="px"/>
+							<textField isStretchWithOverflow="true">
+								<reportElement x="0" y="0" width="302" height="30" uuid="9d17d188-9568-4cf4-a236-c6d0059ffce9">
+									<property name="com.jaspersoft.studio.unit.leftIndent" value="px"/>
 								</reportElement>
+								<box leftPadding="2"/>
 								<textElement textAlignment="Left" verticalAlignment="Middle">
-									<paragraph firstLineIndent="5"/>
+									<font fontName="SansSerif" size="12"/>
+									<paragraph leftIndent="5"/>
 								</textElement>
 								<textFieldExpression><![CDATA[$F{titulo_trabalho}]]></textFieldExpression>
 							</textField>
